--- a/old/府城奇聞錄1/openpage.html
+++ b/old/府城奇聞錄1/openpage.html
@@ -1408,15 +1408,14 @@ window.hashStr = function(txt) {
 /*預載圖片*/
 &lt;&lt;preload &#39;img/bosshead.png&#39; &#39;img/brand.png&#39; &#39;img/card.png&#39; &#39;img/cathead.png&#39; &#39;img/detect1.jpg&#39; &#39;img/detect2.jpg&#39; &#39;img/detect3.jpg&#39; &#39;img/detect4.jpg&#39; &#39;img/detect5.jpg&#39; &#39;img/detect6.jpg&#39; &#39;img/detect7.jpg&#39; &#39;img/fan.png&#39; &#39;img/ghosthead.png&#39; &#39;img/godhead.png&#39; &#39;img/hat.png&#39; &#39;img/hsiaofanhead.png&#39; &#39;img/lichinghead.png&#39; &#39;img/zhininghead.png&#39; &#39;img/logo.png&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="85" name="PassageHeader" tags="noreturn" position="700,1200" size="100,100"></tw-passagedata><tw-passagedata pid="86" name="PassageFooter" tags="" position="700,1100" size="100,100">
 
-&lt;&lt;if tags().includes(&#39;QR&#39;)&gt;&gt;&lt;u&gt;@@color:Orange;錯字更正：實體道具「法器靈術圖」，法器位置應改為「L2-3、L3-3、L8-7」。@@&lt;/u&gt;
-&lt;u&gt;@@color:DarkSeaGreen;提醒：如果找不到QRCODE，可能是找錯地方囉！如果確定地點無誤，那麼也可以選擇手動輸入地點。@@
+&lt;&lt;if tags().includes(&#39;QR&#39;)&gt;&gt;&lt;u&gt;@@color:DarkSeaGreen;提醒：如果找不到QRCODE，可能是找錯地方囉！如果確定地點無誤，那麼也可以選擇手動輸入地點。@@
 &lt;/u&gt;	  
 &lt;&lt;include &#39;第三關手動&#39;&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 
-&lt;&lt;if tags().includes(&#39;error&#39;)&gt;&gt;&lt;u&gt;@@color:Orange;錯字更正：實體道具「女戒字謎卡」，第一行的倒數第二個字「者」為錯字，應改為「旨」。
-[[正確的女戒字謎卡圖檔|https://drive.google.com/file/d/15i3MlLi-QU7P-PTtFNn1WqtSJY4GK8BM/view?usp=sharing]]
-道歉啟事：由於場地整修，代天府門上的春聯遭暫時移除，請改參考[[門聯照片|https://drive.google.com/file/d/1Pp5iKdYYxFr3PEc1bszYe1-ufs3wKbXB/view?usp=sharing]]解謎。@@&lt;/u&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="87" name="開場" tags="" position="1000,500" size="100,100">@@.center;&lt;h2&gt;府城奇聞錄（老古石街篇）&lt;/h2&gt;@@
+&lt;&lt;if tags().includes(&#39;error&#39;)&gt;&gt;&lt;u&gt;@@color:Orange;道歉啟事：由於場地整修，代天府門上的春聯遭暫時移除，請參考下面的門聯照片解謎。@@&lt;/u&gt;
+&lt;img src=&quot;https://drive.google.com/uc?id=1Pp5iKdYYxFr3PEc1bszYe1-ufs3wKbXB&quot; width=&quot;100%&quot;&gt;
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="87" name="開場" tags="" position="1000,500" size="100,100">@@.center;&lt;h2&gt;府城奇聞錄（老古石街篇）&lt;/h2&gt;@@
 &lt;table&gt;
 少年小凡，跟隨爸爸整理老屋時，發現失蹤許久的奶奶的日記，小凡閱讀日記的過程中，發覺奶奶的失蹤並不單純，於是，小凡重回奶奶曾經旅遊的歷史街區，找尋奶奶失蹤的真相。
 @@.center;
