--- a/tainanwcdo/test.html
+++ b/tainanwcdo/test.html
@@ -2533,7 +2533,7 @@ Macro.add('ScrollTo', {
 		Dialog.wiki(Story.get(&quot;credits&quot;).processText());
 		Dialog.open();
 	&lt;&lt;/script&gt;&gt;
-&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="StoryBanner" tags="noreturn" position="425,0" size="100,100">&lt;img src=&quot;media/img/logo.png&quot; width=&quot;100%&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="StorySubtitle" tags="noreturn" position="425,200" size="100,100">(副標題)</tw-passagedata><tw-passagedata pid="5" name="StoryAuthor" tags="noreturn" position="425,300" size="100,100">中西區公所x台南社大</tw-passagedata><tw-passagedata pid="6" name="StoryCaption" tags="noreturn" position="325,100" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入非連結內容，會顯示於「StoryMenu」內容之下 --&gt;</tw-passagedata><tw-passagedata pid="7" name="開始頁面" tags="center ch0 ch0-1" position="900,0" size="100,100">&lt;&lt;timed 1s t8n&gt;&gt;&lt;div class=&quot;font-2&quot;&gt;&lt;h3&gt;//為著愛情，不知雨水冷～
+&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="3" name="StoryBanner" tags="noreturn" position="425,0" size="100,100">&lt;img src=&quot;media/img/logo.png&quot; width=&quot;100%&quot;&gt;</tw-passagedata><tw-passagedata pid="4" name="*StorySubtitle" tags="noreturn" position="425,200" size="100,100"></tw-passagedata><tw-passagedata pid="5" name="StoryAuthor" tags="noreturn" position="425,300" size="100,100">中西區公所x台南社大</tw-passagedata><tw-passagedata pid="6" name="StoryCaption" tags="noreturn" position="325,100" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入非連結內容，會顯示於「StoryMenu」內容之下 --&gt;</tw-passagedata><tw-passagedata pid="7" name="開始頁面" tags="center ch0 ch0-1" position="900,0" size="100,100">&lt;&lt;timed 1s t8n&gt;&gt;&lt;div class=&quot;font-2&quot;&gt;&lt;h3&gt;//為著愛情，不知雨水冷～
 彼款感是，初戀的熱情～//&lt;/h3&gt;&lt;/div&gt;
 
 [[下一頁|雜技團裡大騷動01]]
@@ -3743,7 +3743,7 @@ html[data-debug-view] .debug.hidden .debug {
 &lt;&lt;replace &#39;#name&#39;&gt;&gt;&lt;img src=&quot;media/img/聖獸群.png&quot;  @style=&quot;&#39;width: &#39; + $width + &#39;%;&#39;&quot;&gt;&lt;&lt;/replace&gt;&gt;&quot;麒麟老大的靈力可比我們強上百倍，
 光靠一般聖獸歸位的儀式，
 是無法將麒麟歸位，
-但如果用金安宮的『混天元型二十八卦鎖』.....&quot;
+但如果用金安宮的『二十八星宿鎖』.....&quot;
 
 &lt;&lt;ctpNext clear t8n&gt;&gt;&lt;&lt;replace &#39;#name&#39;&gt;&gt;&lt;img src=&quot;media/img/許牧尋.png&quot;  @style=&quot;&#39;width: &#39; + $width + &#39;%;&#39;&quot;&gt;&lt;&lt;/replace&gt;&gt;&quot;祢們是說，
 那個近似香爐的機關？&quot;
@@ -3758,19 +3758,19 @@ html[data-debug-view] .debug.hidden .debug {
 
 &lt;&lt;/ctp&gt;&gt;
 &lt;span id=&#39;next&#39;&gt;&lt;&lt;link &quot;繼續&quot;&gt;&gt;&lt;&lt;ctpAdvance &quot;testID&quot;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;&lt;/div&gt;
-&lt;span id=&#39;continue&#39;&gt;&lt;/span&gt;&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="38" name="鎖聖獸關卡02" tags="center ch2 noheader" position="1725,300" size="100,100">@@color:#4E7D96;&lt;h2&gt;找到「混天元型二十八卦鎖」&lt;/h2&gt;@@
+&lt;span id=&#39;continue&#39;&gt;&lt;/span&gt;&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="38" name="鎖聖獸關卡02" tags="center ch2 noheader" position="1725,300" size="100,100">@@color:#4E7D96;&lt;h2&gt;找到「二十八星宿鎖」&lt;/h2&gt;@@
 
-將八卦鎖恢復原狀，可得到⼀組降伏麒麟的咒語，即可將麒麟帶回原位！
+將二十八星宿鎖恢復原狀，可得到⼀組降伏麒麟的咒語，即可將麒麟帶回原位！
 
 &lt;&lt;linkreplace &quot;進行解謎&quot;&gt;&gt;
-&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;在道具包中，1號與2號圓盤，可以組成八卦鎖的樣式。道具包中有附⼀雙腳釘，可以將兩件道具，組成可轉動的轉盤。
+&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;在道具包中，1號與2號圓盤，可以組成二十八星宿鎖的樣式。道具包中有附⼀雙腳釘，可以將兩件道具，組成可轉動的轉盤。
 
-請參照⾦安宮中的⼆⼗八星宿香爐，將八卦鎖轉到正確的位置，咒語即會依順時針⽅向顯現。八卦卦形，請參照歌訣：
+請參照⾦安宮中的⼆⼗八星宿香爐，將二十八星宿鎖轉到正確的位置，咒語即會依順時針⽅向顯現。八卦卦形，請參照歌訣：
 
 「乾三連，坤六斷，震仰盂，艮覆碗，離中虛，坎中滿，兌上缺，巽下斷」@@&lt;/div&gt;
 @@(會再增加「觀看提示」內容)@@
 &lt;&lt;set $answer to &#39;&#39;&gt;&gt;
-請輸入降伏麒麟的咒語：&lt;&lt;textbox &#39;$answer&#39; &#39;&#39; autofocus&gt;&gt;
+請輸入降伏麒麟的咒語：&lt;&lt;textbox &#39;$answer&#39; &#39;⾦靈顯安&#39; autofocus&gt;&gt;
 &lt;span id=&#39;textbox-reply&#39;&gt;&lt;/span&gt;
 &lt;span id=&#39;textbox-submit&#39;&gt;\
   &lt;&lt;button &#39;輸 入&#39;&gt;&gt;
@@ -3824,7 +3824,7 @@ html[data-debug-view] .debug.hidden .debug {
 &lt;iframe src=&quot;https://player.vimeo.com/video/249625865?h=c65c5c7c26&quot; width=&quot;100%&quot; height=&quot;480&quot; frameborder=&quot;0&quot; allow=&quot;autoplay; fullscreen; picture-in-picture&quot; allowfullscreen&gt;&lt;/iframe&gt;
 @@(會再增加「觀看提示」內容)@@
 &lt;&lt;set $answer to &#39;&#39;&gt;&gt;
-請輸入下一個地點：&lt;&lt;textbox &#39;$answer&#39; &#39;&#39; autofocus&gt;&gt;
+請輸入下一個地點：&lt;&lt;textbox &#39;$answer&#39; &#39;媽祖樓&#39; autofocus&gt;&gt;
 &lt;span id=&#39;textbox-reply&#39;&gt;&lt;/span&gt;
 &lt;span id=&#39;textbox-submit&#39;&gt;\
   &lt;&lt;button &#39;輸 入&#39;&gt;&gt;
@@ -3918,7 +3918,7 @@ html[data-debug-view] .debug.hidden .debug {
 &lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請找出藏在圖片中的字。右邊為上聯，左邊為下聯，連在⼀起⼀共有八字。在廟⼝看會更清楚哦。@@&lt;/div&gt;
 @@(會再增加「觀看提示」內容)@@
 &lt;&lt;set $answer to &#39;&#39;&gt;&gt;
-請輸入⺟親許下的心願（8個字）：&lt;&lt;textbox &#39;$answer&#39; &#39;&#39; autofocus&gt;&gt;
+請輸入⺟親許下的心願（8個字）：&lt;&lt;textbox &#39;$answer&#39; &#39;風調雨順國泰⺠安&#39; autofocus&gt;&gt;
 &lt;span id=&#39;textbox-reply&#39;&gt;&lt;/span&gt;
 &lt;span id=&#39;textbox-submit&#39;&gt;\
   &lt;&lt;button &#39;輸 入&#39;&gt;&gt;
@@ -3977,7 +3977,7 @@ html[data-debug-view] .debug.hidden .debug {
 &lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請取出4號迷宮圖紙，從打星星處出發，設法取回三種不同的法寶。請注意，若走到其中⼀個⾨，則視為抵達終點。能順利取得三個寶物的路線，抵達的終點，便是聲⾳的⽅向。請走⾄該處，輸入⾨上⽅所寫的兩個字。@@&lt;/div&gt;
 @@(會再增加「觀看提示」內容)@@
 &lt;&lt;set $answer to &#39;&#39;&gt;&gt;
-請輸入⾨上⽅的兩個字（從左到右）：&lt;&lt;textbox &#39;$answer&#39; &#39;&#39; autofocus&gt;&gt;
+請輸入⾨上⽅的兩個字（從左到右）：&lt;&lt;textbox &#39;$answer&#39; &#39;隱陀&#39; autofocus&gt;&gt;
 &lt;span id=&#39;textbox-reply&#39;&gt;&lt;/span&gt;
 &lt;span id=&#39;textbox-submit&#39;&gt;\
   &lt;&lt;button &#39;輸 入&#39;&gt;&gt;
@@ -4069,7 +4069,7 @@ html[data-debug-view] .debug.hidden .debug {
 &quot;這是福齡跟我求婚時，所唱的歌呀。&quot;
 
 &lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;
-&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;&lt;&lt;replace &#39;#continue&#39;&gt;&gt;見到母親美麗的笑容，我想起文學家葉石濤說的話，台南果真是一個適於人們，做夢、幹活、戀愛、結婚、悠然過日子的好地方。
+&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;&lt;&lt;replace &#39;#continue&#39;&gt;&gt;見到母親美麗的笑容，我想起台南有人說，台南果真是一個適於人們，做夢、幹活、戀愛、結婚、悠然過日子的好地方。
 
 &lt;img src=&quot;media/img/結局圖.png&quot;  width=100% &gt;
 
@@ -4216,7 +4216,7 @@ https://reurl.cc/leNDV9</tw-passagedata><tw-passagedata pid="63" name="雜技團
 	  &lt;&lt;/if&gt;&gt;
   &lt;&lt;/button&gt;&gt;
 &lt;/span&gt;
-&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="圖片連結整理" tags="" position="700,125" size="100,100">LOGO
+&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="67" name="圖片連結整理" tags="" position="0,600" size="100,100">LOGO
 &lt;img src=&quot;media/img/logo.png&quot; width=&quot;80%&quot;&gt;
 media/img/烏龜.png
 
@@ -4336,7 +4336,7 @@ media/img/烏龜.png
 	&lt;/tr&gt;
 &lt;/table&gt;
 
-[[重置聖獸|聖獸亂像關卡03解謎]]／[[進行歸位|聖獸亂像關卡03解謎結果]]</tw-passagedata><tw-passagedata pid="69" name="神明選擇" tags="" position="900,700" size="100,100">&lt;&lt;silently&gt;&gt;
+[[重置聖獸|聖獸亂像關卡03解謎]]／[[進行歸位|聖獸亂像關卡03解謎結果]]</tw-passagedata><tw-passagedata pid="69" name="神明選擇" tags="" position="0,700" size="100,100">&lt;&lt;silently&gt;&gt;
 &lt;&lt;if not $clueimage&gt;&gt;
   &lt;&lt;set $choicesCount to -1&gt;&gt;
   &lt;&lt;set $choices to [&quot;兵將小弟甲&quot;, &quot;兵將小弟乙&quot;, &quot;兵將小弟丙&quot;, &quot;辛元帥&quot;, &quot;蕭聖者&quot;, &quot;縛大將&quot;, &quot;林府千歲&quot;, &quot;馬府將軍&quot;, &quot;上帝公&quot;]&gt;&gt;
@@ -4361,7 +4361,7 @@ media/img/烏龜.png
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="71" name="鎖聖獸關卡01解謎" tags="center ch2 noheader" position="1825,175" size="100,100">@@color:#4E7D96;&lt;h2&gt;把金安宮的聖獸歸位&lt;/h2&gt;@@
 
 &lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請抬頭看看廟宇天花板的圖畫，來把這些圖板歸回原位吧(請利用下拉式選單變換圖畫)。@@&lt;/div&gt;
-
+@@答案從左上到下~右上到下為61857243@@
 &lt;span style=&#39;background-color:red;&#39;&gt;麒麟香爐&lt;/span&gt;
 &lt;&lt;set _classes = [&quot;1&quot;, &quot;2&quot;, &quot;3&quot;, &quot;4&quot;, &quot;5&quot;, &quot;6&quot;, &quot;7&quot;, &quot;8&quot;]&gt;&gt;
  &lt;table&gt;
@@ -4486,7 +4486,7 @@ media/img/烏龜.png
 	});
 &lt;&lt;/script&gt;&gt;
 
-[[完成歸位|鎖聖獸關卡01解謎結果]]</tw-passagedata><tw-passagedata pid="72" name="floor6" tags="" position="1600,900" size="100,100">&lt;img src=&quot;media/img/f6.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="73" name="floor7" tags="" position="1700,900" size="100,100">&lt;img src=&quot;media/img/f7.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="74" name="floor8" tags="" position="1800,900" size="100,100">&lt;img src=&quot;media/img/f8.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="75" name="floor5" tags="" position="1500,900" size="100,100">&lt;img src=&quot;media/img/f5.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="76" name="floor4" tags="" position="1800,800" size="100,100">&lt;img src=&quot;media/img/f4.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="77" name="floor3" tags="" position="1700,800" size="100,100">&lt;img src=&quot;media/img/f3.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="78" name="floor2" tags="" position="1600,800" size="100,100">&lt;img src=&quot;media/img/f2.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="79" name="floor1" tags="" position="1500,800" size="100,100">&lt;img src=&quot;media/img/f1.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="80" name="鎖聖獸關卡01解謎結果" tags="" position="1825,75" size="100,100">&lt;&lt;if $class1 is &quot;6&quot; and $class2 is &quot;1&quot; and $class3 is &quot;8&quot; and $class4 is &quot;5&quot; and $class5 is &quot;7&quot; and $class6 is &quot;2&quot; and $class7 is &quot;4&quot; and $class8 is &quot;3&quot; &gt;&gt;
+[[完成歸位|鎖聖獸關卡01解謎結果]]</tw-passagedata><tw-passagedata pid="72" name="floor6" tags="" position="1700,950" size="100,100">&lt;img src=&quot;media/img/f6.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="73" name="floor7" tags="" position="1600,1050" size="100,100">&lt;img src=&quot;media/img/f7.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="74" name="floor8" tags="" position="1700,1050" size="100,100">&lt;img src=&quot;media/img/f8.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="75" name="floor5" tags="" position="1600,950" size="100,100">&lt;img src=&quot;media/img/f5.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="76" name="floor4" tags="" position="1700,850" size="100,100">&lt;img src=&quot;media/img/f4.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="77" name="floor3" tags="" position="1600,850" size="100,100">&lt;img src=&quot;media/img/f3.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="78" name="floor2" tags="" position="1700,750" size="100,100">&lt;img src=&quot;media/img/f2.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="79" name="floor1" tags="" position="1600,750" size="100,100">&lt;img src=&quot;media/img/f1.png&quot; width=&quot;80%&quot;&gt;</tw-passagedata><tw-passagedata pid="80" name="鎖聖獸關卡01解謎結果" tags="" position="1825,75" size="100,100">&lt;&lt;if $class1 is &quot;6&quot; and $class2 is &quot;1&quot; and $class3 is &quot;8&quot; and $class4 is &quot;5&quot; and $class5 is &quot;7&quot; and $class6 is &quot;2&quot; and $class7 is &quot;4&quot; and $class8 is &quot;3&quot; &gt;&gt;
 		歸位成功！&lt;&lt;timed 2s t8n&gt;&gt;&lt;&lt;goto &#39;鎖聖獸03&#39;&gt;&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;else&gt;&gt;
 	歸位錯誤，[[重新嘗試|鎖聖獸關卡01解謎]]
