--- a/tainanwcdo/test.html
+++ b/tainanwcdo/test.html
@@ -2570,7 +2570,7 @@ Macro.add('ScrollTo', {
 &lt;&lt;set $title0 = false&gt;&gt;&lt;&lt;set $title1 = false&gt;&gt;&lt;&lt;set $title2 = false&gt;&gt;&lt;&lt;set $title3 = false&gt;&gt;&lt;&lt;set $title4 = false&gt;&gt;&lt;&lt;set $title5 = false&gt;&gt;
 
 /*預載圖片*/
-&lt;&lt;preload &#39;media/img/？.png&#39; &#39;media/img/大聖爺.png&#39; &#39;media/img/玄天上帝.png&#39; &#39;media/img/白文鳥.png&#39; &#39;media/img/石獅公.png&#39; &#39;media/img/老年時月音.png&#39; &#39;media/img/時月音.png&#39; &#39;media/img/售票員.png&#39; &#39;media/img/許牧尋.png&#39; &#39;media/img/許福齡.png&#39; &#39;media/img/麒麟子.png&#39; &#39;media/img/聖獸群.png&#39; &#39;media/img/序章背景.jpg&#39; &#39;media/img/第一章背景.jpg&#39; &#39;media/img/第二章背景.jpg&#39; &#39;media/img/第三章背景.jpg&#39; &#39;media/img/第四章背景.jpg&#39; &#39;media/img/終章背景.jpg&#39; &#39;media/img/上帝公.png&#39; &#39;media/img/大象.png&#39; &#39;media/img/兵將小弟乙.png&#39; &#39;media/img/兵將小弟丙.png&#39; &#39;media/img/兵將小弟甲.png&#39; &#39;media/img/辛元帥.png&#39; &#39;media/img/林府千歲.png&#39; &#39;media/img/烏龜.png&#39; &#39;media/img/馬府將軍.png&#39; &#39;media/img/縛大將.png&#39; &#39;media/img/蕭聖者.png&#39; &#39;media/img/麒麟.png&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryMenu" tags="noreturn" position="325,0" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入連結內容 --&gt;
+&lt;&lt;preload &#39;media/img/？.png&#39; &#39;media/img/大聖爺.png&#39; &#39;media/img/玄天上帝.png&#39; &#39;media/img/白文鳥.png&#39; &#39;media/img/石獅公.png&#39; &#39;media/img/老年時月音.png&#39; &#39;media/img/時月音.png&#39; &#39;media/img/售票員.png&#39; &#39;media/img/許牧尋.png&#39; &#39;media/img/許福齡.png&#39; &#39;media/img/麒麟子.png&#39; &#39;media/img/聖獸群.png&#39; &#39;media/img/序章背景.jpg&#39; &#39;media/img/第一章背景.jpg&#39; &#39;media/img/第二章背景.jpg&#39; &#39;media/img/第三章背景.jpg&#39; &#39;media/img/第四章背景.jpg&#39; &#39;media/img/終章背景.jpg&#39; &#39;media/img/上帝公.png&#39; &#39;media/img/大象.png&#39; &#39;media/img/兵將小弟乙.png&#39; &#39;media/img/兵將小弟丙.png&#39; &#39;media/img/兵將小弟甲.png&#39; &#39;media/img/辛元帥.png&#39; &#39;media/img/林府千歲.png&#39; &#39;media/img/烏龜.png&#39; &#39;media/img/馬府將軍.png&#39; &#39;media/img/縛大將.png&#39; &#39;media/img/蕭聖者.png&#39; &#39;media/img/麒麟.png&#39; &#39;media/img/f1.png&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryMenu" tags="noreturn" position="325,0" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入連結內容 --&gt;
 &lt;&lt;link &quot;選擇章節&quot;&gt;&gt;&lt;&lt;run slideWin(&quot;章節選擇&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
 &lt;&lt;link &quot;開啟QR碼掃描&quot;&gt;&gt;&lt;&lt;run slideWin(&quot;QR&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
 &lt;&lt;link &quot;製作人員&quot;&gt;&gt;
@@ -3574,8 +3574,8 @@ html[data-debug-view] .debug.hidden .debug {
 &lt;&lt;ctpNext clear t8n&gt;&gt;
 &lt;&lt;replace &#39;#name&#39;&gt;&gt;&lt;img src=&quot;media/img/售票員.png&quot;  @style=&quot;&#39;width: &#39; + $width + &#39;%;&#39;&quot;&gt;&lt;&lt;/replace&gt;&gt;&quot;喂！年輕人，
 輪到你們買票了，
-你是沒看到後面有一堆人在排隊膩！&quot;
-&lt;&lt;replace &#39;#next&#39;&gt;&gt;&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;&lt;replace &#39;#continue&#39;&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;&lt;&lt;timed 1s t8n&gt;&gt;就是這個「膩」把許福齡從幻想的泡泡中拉回到現實，兩人紅著臉快步踏入雜技團的大棚子裡，紫雲雜技團的表演果然不同凡響，現場有美麗的歌手唱戲、各種絢爛的魔術秀，月英和福齡兩人陷入在雜技團的魔幻世界中。&lt;&lt;/timed&gt;&gt;
+你是沒看到後面有一堆人在排隊膩！&quot;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
+&lt;&lt;replace &#39;#next&#39;&gt;&gt;&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;&lt;replace &#39;#continue&#39;&gt;&gt;&lt;&lt;timed 1s t8n&gt;&gt;就是這個「膩」把許福齡從幻想的泡泡中拉回到現實，兩人紅著臉快步踏入雜技團的大棚子裡，紫雲雜技團的表演果然不同凡響，現場有美麗的歌手唱戲、各種絢爛的魔術秀，月英和福齡兩人陷入在雜技團的魔幻世界中。&lt;&lt;/timed&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
 
 [[下一頁|雜技團裡大騷動02]]&lt;&lt;/replace&gt;&gt;&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;replace &#39;#next&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/ctp&gt;&gt;
@@ -3612,7 +3612,7 @@ html[data-debug-view] .debug.hidden .debug {
 	&lt;/div&gt;\
 &lt;/section&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 3s t8n&gt;&gt;
-[[進行解謎|聖獸亂像關卡01]]
+[[進行解謎|聖獸亂像關卡01]]&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
 &lt;&lt;/timed&gt;&gt;&lt;&lt;set $title1 = true&gt;&gt;</tw-passagedata><tw-passagedata pid="27" name="聖獸亂像關卡01" tags="center ch1 noheader" position="1325,50" size="100,100">@@color:#4E7D96;&lt;h2&gt;解讀老照片後的詩句&lt;/h2&gt;@@
 
 &lt;img src=&quot;media/img/老照片背面.png&quot;  width=&quot;100%&quot;&gt;
@@ -3647,7 +3647,7 @@ html[data-debug-view] .debug.hidden .debug {
 &lt;div id=&#39;speech&#39;&gt;
 &lt;span id=&#39;name&#39;&gt;&lt;img src=&quot;media/img/石獅公.png&quot;  @style=&quot;&#39;width: &#39; + $width + &#39;%;&#39;&quot;&gt;&lt;/span&gt;
 &lt;&lt;ctp &quot;testID&quot;&gt;&gt;
-&quot;年輕人，你怎麼會有那顆寶玉？&quot;
+&quot;年輕人，你怎麼會有那顆寶玉？&quot;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
 
 &lt;&lt;ctpNext clear t8n&gt;&gt;&lt;&lt;replace &#39;#name&#39;&gt;&gt;&lt;img src=&quot;media/img/許牧尋.png&quot;  @style=&quot;&#39;width: &#39; + $width + &#39;%;&#39;&quot;&gt;&lt;&lt;/replace&gt;&gt;&quot;咦？等等，
 神、神像怎麼突然說話？
@@ -4119,20 +4119,20 @@ $(document).one(&quot;:passagerender&quot;, function (ev) {
 
 https://reurl.cc/leNDV9</tw-passagedata><tw-passagedata pid="63" name="雜技團裡大騷動03" tags="center ch0" position="900,425" size="100,100">&lt;&lt;timed 40ms t8n&gt;&gt;兩人期待著獅子會有什麼精采的表演，暗處，一道黑影，熟練地攀爬到棚子上的欄杆，拿出一顆寶玉，發出嘿嘿嘿的笑聲，寶玉閃動詭譎的光芒。&lt;&lt;/timed&gt;&gt;
 
-&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;遠處，一陣奇異的光照耀在獅子身上，獅子紅眼發出嘶吼，掙開兩旁的鎖鍊，朝觀眾席狂奔而去，牠第一個目標恰好是時月英，福齡起身想要保護月英，黑影見狀有些手忙腳亂，他似乎不知道寶玉所帶來的效果會發生什麼事？
+&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;遠處，一陣奇異的光照耀在獅子身上，獅子紅眼發出嘶吼，掙開兩旁的鎖鍊，朝觀眾席狂奔而去，牠第一個目標恰好是時月英，福齡起身想要保護月英，黑影見狀有些手忙腳亂，他似乎不知道寶玉所帶來的效果會發生什麼事？&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
 
-&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;慌亂中，寶玉從指縫中滑落，正巧落在時月英與許福齡身邊，寶玉又發出光芒，脫序演出的獅子被未知的力量馴服，許福齡看見獅子身旁似乎站著某人的身影。
+&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;慌亂中，寶玉從指縫中滑落，正巧落在時月英與許福齡身邊，寶玉又發出光芒，脫序演出的獅子被未知的力量馴服，許福齡看見獅子身旁似乎站著某人的身影。&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
 
-&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;好不容易，現場恢復該有的秩序，獅子被拖回帳篷內，雜技團團長正不斷向各位觀眾道歉。
+&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;好不容易，現場恢復該有的秩序，獅子被拖回帳篷內，雜技團團長正不斷向各位觀眾道歉。&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
 
 &lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;div id=&#39;speech&#39;&gt;
 &lt;span id=&#39;name&#39;&gt;&lt;img src=&quot;media/img/時月音.png&quot;  @style=&quot;&#39;width: &#39; + $width + &#39;%;&#39;&quot;&gt;&lt;/span&gt;
 &lt;&lt;ctp &quot;testID&quot;&gt;&gt;
 &quot;剛才到底是......
-福齡你沒事吧？&quot;
+福齡你沒事吧？&quot;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
 
 &lt;&lt;ctpNext clear t8n&gt;&gt;&lt;&lt;replace &#39;#name&#39;&gt;&gt;&lt;img src=&quot;media/img/許福齡.png&quot;  @style=&quot;&#39;width: &#39; + $width + &#39;%;&#39;&quot;&gt;&lt;&lt;/replace&gt;&gt;&quot;我也沒有事，
-好像是這一顆寶玉保護了我們。&quot;
+好像是這一顆寶玉保護了我們。&quot;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;
 &lt;&lt;replace &#39;#next&#39;&gt;&gt;&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;&lt;replace &#39;#continue&#39;&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;兩人對於未知的寶玉感到好奇，明白寶玉蘊藏一股神祕的力量，此後，這顆寶玉成為兩人結合的重要信物。
 
 [[下一頁|雜技團裡大騷動04]]&lt;&lt;/replace&gt;&gt;&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;replace &#39;#next&#39;&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/replace&gt;&gt;
