--- a/tainanwcdo/final.html
+++ b/tainanwcdo/final.html
@@ -4198,7 +4198,7 @@ media/img/烏龜.png
     &lt;/tr&gt;
  &lt;/table&gt;
 
-[[重置配對|聖獸亂像關卡03解謎]]｜[[進行歸位|聖獸亂像關卡03解謎結果]]
+[[進行歸位|聖獸亂像關卡03解謎結果]]
 /*
 &lt;&lt;link &#39;給點提示吧...&#39;&gt;&gt;
     &lt;&lt;script&gt;&gt;
