--- a/tainanwcdo/final.html
+++ b/tainanwcdo/final.html
@@ -4476,8 +4476,10 @@ media/img/烏龜.png
     &lt;&lt;/script&gt;&gt;
 &lt;&lt;/link&gt;&gt;*/</tw-passagedata><tw-passagedata pid="86" name="遺忘之歌關卡01解謎" tags="center ch4 noheader" position="2625,300" size="100,100">@@color:#4E7D96;&lt;h2&gt;從普濟殿裡蒐集兇手的線索，並推理出兇手是誰？&lt;/h2&gt;@@
 
-&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請取出4號迷宮圖紙，從打星星處出發，設法取回三種不同的法寶。請注意，若走到其中⼀個⾨，則視為抵達終點。能順利取得三個寶物的路線，抵達的終點，便是聲⾳的⽅向。請走⾄該處，輸入⾨上⽅所寫的兩個字。
-圖紙上的兩條虛線，是可以摺的哦。試著摺摺看再走吧。@@&lt;/div&gt;
+&lt;div class=&quot;font-1&quot;&gt;@@color:darkslategrey;請取出4號迷宮圖紙，從打星星處出發，設法取回三種不同的法寶。圖紙上的兩條虛線，是可以摺的哦。試著摺摺看再走吧。
+
+請注意，若走到其中⼀個⾨，則視為抵達終點。能順利取得三個寶物的路線，抵達的終點，便是聲⾳的⽅向。請將迷宮圖紙對照普濟殿平面圖（如下），找出抵達終點的實際位置並走⾄該處的門，輸入⾨上⽅所寫的兩個字。@@&lt;/div&gt;
+&lt;img src=&quot;media/img/普濟殿平面圖.jpg&quot; width=&quot;90%&quot;&gt;
 
 &lt;&lt;set $answer to &#39;&#39;&gt;&gt;
 請輸入⾨上⽅的兩個字（從左到右）：&lt;&lt;textbox &#39;$answer&#39; &#39;&#39; autofocus&gt;&gt;
