--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -2688,7 +2688,7 @@ Macro.add('ScrollTo', {
 &lt;&lt;set $clueimage2 to $choices2[$choicesCount2]&gt;&gt;
 
 /*預載圖片*/
-&lt;&lt;preload &#39;media/img/？.png&#39; &#39;media/img/大聖爺.png&#39; &#39;media/img/玄天上帝.png&#39; &#39;media/img/白文鳥.png&#39; &#39;media/img/石獅公.png&#39; &#39;media/img/老年時月音.png&#39; &#39;media/img/時月音.png&#39; &#39;media/img/售票員.png&#39; &#39;media/img/許牧尋.png&#39; &#39;media/img/許福齡.png&#39; &#39;media/img/麒麟子.png&#39; &#39;media/img/聖獸群.png&#39; &#39;media/img/序章背景.jpg&#39; &#39;media/img/第一章背景.jpg&#39; &#39;media/img/第二章背景.jpg&#39; &#39;media/img/第三章背景.jpg&#39; &#39;media/img/第四章背景.jpg&#39; &#39;media/img/終章背景.jpg&#39; &#39;media/img/上帝公.png&#39; &#39;media/img/大象.png&#39; &#39;media/img/兵將小弟乙.png&#39; &#39;media/img/兵將小弟丙.png&#39; &#39;media/img/兵將小弟甲.png&#39; &#39;media/img/辛元帥.png&#39; &#39;media/img/林府千歲.png&#39; &#39;media/img/烏龜.png&#39; &#39;media/img/馬府將軍.png&#39; &#39;media/img/縛大將.png&#39; &#39;media/img/蕭聖者.png&#39; &#39;media/img/麒麟.png&#39; &#39;media/img/f1.png&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryMenu" tags="noreturn" position="325,0" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入連結內容 --&gt;
+&lt;&lt;preload &#39;media/img/？.png&#39; &#39;media/img/大聖爺.png&#39; &#39;media/img/玄天上帝.png&#39; &#39;media/img/白文鳥.png&#39; &#39;media/img/石獅公.png&#39; &#39;media/img/老年時月音.png&#39; &#39;media/img/時月音.png&#39; &#39;media/img/售票員.png&#39; &#39;media/img/許牧尋.png&#39; &#39;media/img/許福齡.png&#39; &#39;media/img/麒麟子.png&#39; &#39;media/img/聖獸群.png&#39; &#39;media/img/序章背景.jpg&#39; &#39;media/img/第一章背景.jpg&#39; &#39;media/img/第二章背景.jpg&#39; &#39;media/img/第三章背景.jpg&#39; &#39;media/img/第四章背景.jpg&#39; &#39;media/img/終章背景.jpg&#39; &#39;media/img/上帝公.png&#39; &#39;media/img/大象.png&#39; &#39;media/img/兵將小弟乙.png&#39; &#39;media/img/兵將小弟丙.png&#39; &#39;media/img/兵將小弟甲.png&#39; &#39;media/img/辛元帥.png&#39; &#39;media/img/林府千歲.png&#39; &#39;media/img/烏龜.png&#39; &#39;media/img/馬府將軍.png&#39; &#39;media/img/縛大將.png&#39; &#39;media/img/蕭聖者.png&#39; &#39;media/img/麒麟.png&#39; &#39;media/img/f1.png&#39; &#39;media/img/close.png&#39; &#39;media/img/datamenu.png&#39; &#39;media/img/forth.png&#39; &#39;media/img/back.png&#39; &#39;media/img/restart.png&#39; &#39;media/img/save.png&#39;&gt;&gt;</tw-passagedata><tw-passagedata pid="2" name="StoryMenu" tags="noreturn" position="325,0" size="100,100">&lt;!-- 側邊欄顯示的文字在此編輯，此頁面加入連結內容 --&gt;
 &lt;&lt;link &quot;選擇章節&quot;&gt;&gt;&lt;&lt;run slideWin(&quot;章節選擇&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;
 &lt;&lt;link &quot;製作人員&quot;&gt;&gt;
 	&lt;&lt;script&gt;&gt;
@@ -4762,7 +4762,7 @@ media/img/烏龜.png
 #遊戲程式透過網頁瀏覽器來運作，建議使用@@color:green;chrome瀏覽器@@。
 #遊戲程式的@@color:green;左側選單@@可以收合，點擊左側上方&lt;img src=&quot;media/img/close.png&quot; height=&quot;25px&quot;&gt;進行收合展開。
 #遊戲過程中須保持網路連線。欲返回前一個遊戲畫面，請點擊左側選單上方的&lt;img src=&quot;media/img/back.png&quot; height=&quot;25px&quot;&gt;，@@color:red;請勿點擊網頁瀏覽器上一頁@@。
-#選單中的&lt;img src=&quot;media/img/save.png&quot; height=&quot;25px&quot;&gt;可以儲存遊戲進度；&lt;img src=&quot;media/img/restart.png&quot; height=&quot;25px&quot;&gt;則可以清除所有遊戲資料，從頭開始遊戲。
+#選單中的&lt;img src=&quot;media/img/save.png&quot; height=&quot;20px&quot;&gt;可以儲存遊戲進度；&lt;img src=&quot;media/img/restart.png&quot; height=&quot;20px&quot;&gt;則可以清除所有遊戲資料，從頭開始遊戲。
 #若因故關閉遊戲程式導致遊戲進度重置，可從左側選單中的&lt;img src=&quot;media/img/datamenu.png&quot; height=&quot;25px&quot;&gt;選擇欲遊玩的章節、關卡。
 &lt;/div&gt;
 [[開始遊戲|開始頁面]]</tw-passagedata></tw-storydata>
