--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -4756,8 +4756,7 @@ media/img/烏龜.png
 
 &lt;&lt;crossfadecontainer &quot;testID&quot; &quot;media/img/結局圖.png&quot;&gt;&gt;&lt;&lt;timed 1s&gt;&gt;&lt;&lt;crossfade &quot;testID&quot; &quot;media/img/結局圖2.png&quot; 3s&gt;&gt;&lt;&lt;/timed&gt;&gt;
 
-&lt;&lt;timed 3s t8n&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;【END】&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="103" name="遊戲教學" tags="center noheader ch0" position="700,100" size="100,100">&lt;div id=&#39;speech&#39;&gt;
-&lt;div class =&quot;animate__bounceIn animate__infinite animate__slow&quot;&gt;&lt;span class=&quot;title&quot;&gt;遊戲教學&lt;/span&gt;&lt;/div&gt;
+&lt;&lt;timed 3s t8n&gt;&gt;&lt;&lt;ScrollTo &quot;bottomElement&quot; false&gt;&gt;【END】&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="103" name="遊戲教學" tags="center noheader ch0" position="700,100" size="100,100">&lt;div class =&quot;animate__bounceIn animate__infinite animate__slow&quot;&gt;&lt;span class=&quot;title&quot;&gt;遊戲教學&lt;/span&gt;&lt;/div&gt;
 &lt;div class=&quot;lefttext&quot;&gt;
 #遊戲程式透過網頁瀏覽器來運作，建議使用@@color:green;chrome瀏覽器@@。
 #遊戲程式的@@color:green;左側選單@@可以收合，點擊左側上方&lt;img src=&quot;media/img/close.png&quot; height=&quot;25px&quot;&gt;進行收合展開。
