--- a/tainanwcdo/index.html
+++ b/tainanwcdo/index.html
@@ -4031,7 +4031,6 @@ html[data-debug-view] .debug.hidden .debug {
 	  &lt;&lt;/if&gt;&gt;
   &lt;&lt;/button&gt;&gt;
 &lt;/span&gt;
-&lt;&lt;/linkreplace&gt;&gt;
 
 &lt;&lt;link &#39;給點提示吧...&#39;&gt;&gt;
     &lt;&lt;script&gt;&gt;
@@ -4039,9 +4038,10 @@ html[data-debug-view] .debug.hidden .debug {
         Dialog.wiki(Story.get(&quot;鳥卦關卡01提示&quot;).processText());
         Dialog.open();
     &lt;&lt;/script&gt;&gt;
-&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="45" name="鳥卦02" tags="center ch3" position="2000,125" size="100,100">&lt;&lt;timed 40ms t8n&gt;&gt;&lt;div class=&quot;lefttext&quot;&gt;國泰民安⋯⋯母親的心願如此簡單，一想起因戰爭失聯的母親和玄天上帝說過的話，這份心願要實現是如此困難，戰爭奪走太多東西。&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+&lt;&lt;/link&gt;&gt;
+&lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="45" name="鳥卦02" tags="center ch3" position="2000,125" size="100,100">&lt;&lt;timed 40ms t8n&gt;&gt;&lt;div class=&quot;lefttext&quot;&gt;國泰民安⋯⋯母親的心願如此簡單，一想起因戰爭失聯的母親和玄天上帝說過的話，這份心願要實現是如此困難，戰爭奪走太多東西。&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 
-&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;div class=&quot;lefttext&quot;&gt;白文鳥散發光芒，飛了起來，隨後化成一道光束，似乎是指引某個地方，我趕緊對照地圖，這是四聯境的最後一間廟宇-普濟殿。&lt;div&gt;
+&lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;div class=&quot;lefttext&quot;&gt;白文鳥散發光芒，飛了起來，隨後化成一道光束，似乎是指引某個地方，我趕緊對照地圖，這是四聯境的最後一間廟宇-普濟殿。&lt;/div&gt;
 
 &lt;&lt;linkreplace &#39;繼續&#39; t8n&gt;&gt;&lt;div class=&quot;lefttext&quot;&gt;母親的下落.....偷走浮靈子的兇手.....一切的答案都在普濟殿。&lt;/div&gt;
 
@@ -4734,7 +4734,7 @@ media/img/烏龜.png
 乾☰ 坤☷ 震☳ 艮☶ 離☲ 坎☵ 兌☱ 巽☴
 
 &lt;&lt;linkreplace &#39;還是不知道，給我更多提示吧！&#39; t8n&gt;&gt;
-你仔細看，在香爐上，☱（兌）是對到「⼼」和「虛」之間。把「兌」卦轉到那個位置，謎底就揭曉了：@@⾦靈顯安@@。
+你仔細看，在香爐上，☱（兌）是對到「⼼」和「虛」之間。把「兌」卦轉到那個位置，謎底就揭曉了：@@金靈顯安@@。
 &lt;&lt;/linkreplace&gt;&gt;</tw-passagedata><tw-passagedata pid="98" name="鎖聖獸關卡03提示" tags="" position="1925,950" size="100,100">順序為「⼀時貪著...」，接「⼼花當開...」，再接「失戀怨嘆」。翻到背⾯，看看組合出什麼⽂字呢？
 
 &lt;&lt;linkreplace &#39;還是不知道，給我更多提示吧！&#39; t8n&gt;&gt;
